# iitkgp-erp-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: server.py  setup.py
src/auth/: credentials.py  login.py
src/scrapers/: attendance.py  browser.py  electives.py  grades.py  notices.py  placements.py  registration.py  timetable.py
src/utils/: cache.py
