[project]
name = "iitkgp-erp-mcp"
version = "0.1.0"
description = "MCP server for IIT Kharagpur ERP — grades, attendance, analytics through Claude"
authors = [{name = "MSR327"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "iitkgp-erp-login>=2.4.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "keyring>=25.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
iitkgp-erp-mcp = "src.server:main"
iitkgp-erp-setup = "src.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
